A bit of progress towards the launcher project