@@ -1,17 +1,38 @@
+apply plugin: 'org.openjfx.javafxplugin'
 apply plugin: 'application'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'com.github.nkb03.hextant-library'
 
-dependencies {
-    compile project(':hextant-plugins:install')
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+version '1.0-SNAPSHOT'
+
+javafx {
+    version = '11.0.2'
+    modules = ['javafx.controls']
 }
 
-jar {
-    archiveFileName = 'hextant.jar'
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    manifest {
-        attributes('Main-Class': 'hextant.main.Main')
+dependencies {
+    compile project(":hextant-core")
+    compileOnly project(":hextant-codegen")
+//    runtimeOnly project(":hextant-launcher")
+    compile project(":hextant-plugins:install")
+    compile project(":hextant-plugins:common")
+    kapt project(":hextant-codegen")
+}
+
+application {
+    mainClassName = 'hextant.main.Main'
+    applicationDefaultJvmArgs = ['--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED']
+}
+
+run {
+    classpath = sourceSets.main.compileClasspath + sourceSets.main.output
+}
+
+afterEvaluate {
+    for (proj in [":hextant-expr", ":hextant-lisp", ":hextant-core:fatjar", ":blocky"]) {
+        def task = project(proj).tasks.findByPath("$proj:hextantPublish")
+        if (task == null) println("Task 'hextantPublish' not found for project $proj")
+        else run.dependsOn(task)
     }
 }
 
